Cross browser fixes and style tweaks. Main change is that iframes are unloaded when out of view.

--- a/recources/styles/common.css
+++ b/recources/styles/common.css
@@ -69,20 +69,6 @@ h4 {
 	font-size: 40px;
 }
 
-.page-wrapper {
-	position: absolute;
-  overflow: hidden;
-	height: 100vh;
-	margin: 0;
-	z-index: -1;
-	left: 0;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	pointer-events: all;
-	scroll-behavior:
-}
-
 .hidden {
 	display: none;
 }
