--- a/recources/styles/developer.css
+++ b/recources/styles/developer.css
@@ -1,15 +1,10 @@
 :root {
 	--accent-color: var(--page-accent1);
 	--background-gradient: linear-gradient(#333, #222);
-	--foreground-gradient: linear-gradient(#4AD689, #2AB669);
 }
 
 body {
   color: #DDD;
-}
-
-h3::selection {
-  background: #ffb7b7 !important;
 }
 
 div::selection, h1::selection, h3::selection, h4::selection,
@@ -24,8 +19,9 @@ span::-moz-selection, a::-moz-selection, li::-moz-selection {
 }
 
 h1 {
-  margin-bottom: 0;
-  font-size: 50px;
+  margin-bottom: 5pt;
+  font-size: 39pt;
+	line-height: 44pt;
 }
 
 .accent-text {
@@ -69,6 +65,10 @@ h4 {
 	color: var(--accent-color);
 	display: inline-block;
 	margin: 0;
+}
+
+.page-wrapper {
+	z-index: 1;
 }
 
 /* .underrow, h1, h2, a, .accent-text {
