--- a/recources/styles/index.css
+++ b/recources/styles/index.css
@@ -34,6 +34,9 @@
 	text-align: left;
 	margin: 0;
 	box-shadow: 0 0 20px 0 #0005;
+	z-index: 4;
+	/* box-shadow: inset 0 -20px 20px -20px #0005; */
+
 	background: var(--text-background);
 }
 #top-nav img,h1 {
@@ -78,6 +81,7 @@
 	padding: 5px 0;
 	z-index: 5;
 	max-height: 200px;
+	overflow: hidden;
 }
 #nav-dd.hidden {
 	opacity: 0;
@@ -113,11 +117,19 @@
 	pointer-events: none;
 }
 #top-bar-normal {
+	transition-duration: 0.4s;
 	padding-left: var(--page-padding);
+	overflow: hidden;
+	width: 100vw;
+}
+#top-bar-normal.hidden {
+	display: block;
+	opacity: 1;
+	margin-left: 100%;
 }
 
 #top-bar-return {
-	transition-duration: 0.15s;
+	transition-duration: 0.4s;
 	width: 100%;
 	padding: 0 10px;
 	position: fixed;
@@ -126,6 +138,7 @@
 	display: block;
 	opacity: 1;
 	margin-left: -100%;
+	pointer-events: none;
 }
 #top-bar-return:hover{
 	background-color: var(--accent-color);
@@ -143,6 +156,20 @@
 
 #top-bar-return:hover h1{
 	color: white;
+}
+
+.page-wrapper {
+	position: absolute;
+  overflow: hidden;
+	height: 100vh;
+	margin: 0;
+	z-index: 1;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	pointer-events: all;
+	scroll-behavior:
 }
 
 @media screen and (max-width: 1200px) {
